homework-2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: client-manger-deployment
spec:
    replicas: 1
    selector:
       matchLabels:
          app: client-manger
    template:
       metadata:
          labels:
             app: client-manger
       spec:
          containers:
          - name: otushomework-node
            image: sinitsynva/otus-homework:v8-node
            ports:
              - name: web
                containerPort: 70
            livenessProbe:
              httpGet:
                port: 70
                path: /livenessProbe
              initialDelaySeconds: 10
              periodSeconds: 5
              timeoutSeconds: 2
            readinessProbe:
              httpGet:
                port: 70
                path: /health
              initialDelaySeconds: 10
              periodSeconds: 5
