homework-2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-manger-service
spec:
  selector:
    app: client-manger
  ports:
    - protocol: TCP
      port: 8000
      targetPort: web
  type: NodePort
