homework-2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service-manager-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: arch.homework
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: client-manger-service
              port:
                number: 8000
